Add layout builder settings.

--- a/packages/wingsuit/apps/storybook/patterns/05-pages/article/article.twig
+++ b/packages/wingsuit/apps/storybook/patterns/05-pages/article/article.twig
@@ -1,5 +1,6 @@
 {% embed "@templates/site-container.twig"
   with {
+  has_spacer: true,
   primary_menu: pattern_preview('menu', 'primary'),
   footer_menu_1: pattern_preview('menu', 'footer'),
   footer_menu_2: pattern_preview('menu', 'footer'),
