--- a/packages/wingsuit/source/default/patterns/03-organisms/header/header.twig
+++ b/packages/wingsuit/source/default/patterns/03-organisms/header/header.twig
@@ -1,8 +1,12 @@
-<div class="leading-normal tracking-normal">
-  <header class="fixed w-full z-30 top-0 text-white"
-          x-bind:class="{ 'bg-white shadow': isScrollDown}">
-
-    {% embed "@atoms/container/container.twig"%}
+<div class="leading-normal tracking-normal ">
+  {% if has_spacer %}
+    <div class="h-18"></div>
+  {% endif %}
+  <header class="header-offset fixed w-full z-30 top-0 text-white"
+          x-bind:class="{ 'bg-white shadow': isScrollDown}"
+          x-on:click="menuIsOpen = !menuIsOpen"
+  >
+    {% embed "@atoms/container/container.twig" %}
       {% block content %}
         <div class="flex flex-wrap items-center justify-between mt-0 py-2">
 
@@ -22,10 +26,8 @@
           <div
             class="w-full flex-grow lg:flex lg:items-center lg:w-auto hidden lg:block mt-2 lg:mt-0 bg-white lg:bg-transparent text-black p-4 lg:p-0 z-20"
             id="nav-content"
-            :class="{'block -mx-6': menuIsOpen, 'hidden': !menuIsOpen}"
-          >
-              {{ menu }}
-
+            :class="{'block -mx-6': menuIsOpen, 'hidden': !menuIsOpen}">
+            {{ menu }}
             <button id="navAction"
                     class="mx-auto lg:mx-0 hover:underline bg-white text-gray-800 font-bold rounded-full mt-4 lg:mt-0 py-4 px-8 shadow opacity-75">
               Action
