--- a/packages/wingsuit/source/default/patterns/04-templates/article/article.twig
+++ b/packages/wingsuit/source/default/patterns/04-templates/article/article.twig
@@ -1,6 +1,6 @@
-{% embed "@atoms/container/container.twig" with { padding_top: 'large' } %}
+{% embed "@atoms/container/container.twig" with { padding_top: 'small' } %}
   {% block content %}
-  <div class="text-center w-1/2 m-auto pb-8 text-gray-dark pt-10">
+  <div class="text-center w-1/2 m-auto pb-8 text-gray-dark">
     {% include "@atoms/headline/headline.twig" with {
       content: headline
     } only %}
