--- a/packages/wingsuit/apps/drupal/templates/layout/html.html.twig
+++ b/packages/wingsuit/apps/drupal/templates/layout/html.html.twig
@@ -30,8 +30,11 @@
     <title>{{ head_title|safe_join(' | ') }}</title>
     <css-placeholder token="{{ placeholder_token|raw }}">
     <js-placeholder token="{{ placeholder_token|raw }}">
+
   </head>
-  <body{{ attributes }}>
+  <body{{ attributes }}
+    x-data="{ isScrollDown: false, menuIsOpen: false }" x-on:drupalViewportOffsetChange.window="console.log('XX')" x-on:scroll.window="isScrollDown = (window.pageYOffset > 5) ? true : false; "
+  >
     {#
       Keyboard navigation/accessibility link to main content section in
       page.html.twig.
