WS #00: general update wingsuit.

--- a/packages/wingsuit/source/default/patterns/01-atoms/container/container.twig
+++ b/packages/wingsuit/source/default/patterns/01-atoms/container/container.twig
@@ -32,6 +32,7 @@
       width == 'small' ? 'max-w-800',
       width == 'default' ? 'max-w-1200',
       width == 'large' ? 'max-w-1600',
+      width == 'xlarge' ? 'max-w-1900',
       'px-6',
       classes,
       'mx-auto'
