--- a/packages/wingsuit/source/default/patterns/03-organisms/footer/footer.twig
+++ b/packages/wingsuit/source/default/patterns/03-organisms/footer/footer.twig
@@ -1,4 +1,4 @@
-<footer class="bg-white">
+<footer class="bg-white mt-32">
   {% embed "@atoms/container/container.twig" %}
   {% block content %}
     <div class="w-full flex flex-col md:flex-row py-6">
