--- a/packages/wingsuit/source/default/patterns/03-organisms/header/header.twig
+++ b/packages/wingsuit/source/default/patterns/03-organisms/header/header.twig
@@ -24,7 +24,7 @@
           </div>
 
           <div
-            class="w-full flex-grow lg:flex lg:items-center lg:w-auto hidden lg:block mt-2 lg:mt-0 bg-white lg:bg-transparent text-black p-4 lg:p-0 z-20"
+            class="w-full flex-grow lg:flex lg:justify-end lg:items-center lg:w-auto hidden lg:block mt-2 lg:mt-0 bg-white lg:bg-transparent text-black p-4 lg:p-0 z-20"
             id="nav-content"
             :class="{'block -mx-6': menuIsOpen, 'hidden': !menuIsOpen}">
             {{ menu }}
