--- a/packages/wingsuit/source/default/patterns/02-molecules/card/card.twig
+++ b/packages/wingsuit/source/default/patterns/02-molecules/card/card.twig
@@ -10,35 +10,51 @@
   'flex',
 ]) | sort | join(' ') | trim %}
 
+{% set button_classes = ([
+  alignment == 'center'?'mx-auto': '',
+  'text-indigo-500', 'inline-flex', 'items-center', 'md:mb-2', 'lg:mb-0',
+]) | sort | join(' ') | trim %}
 
 <{{ element }} {{ attributes.addClass([
-  alignment == 'center' ? 'text-center': '',
+  alignment == 'center' ? 'text-center rounded': '',
+  bg_color == 'gray' ? 'bg-gray-200',
+  bg_color == 'blue' ? 'bg-blue-200',
   'w-full flex flex-col flex-grow flex-shrink',
 ] | sort | join(' ') | trim) }}>
-
-
-  <div class="flex-1 bg-white rounded-t rounded-b-none overflow-hidden shadow">
+<div class="h-full border-2 border-gray-200 rounded-lg overflow-hidden">
+  {% if image is not empty %}
+    {% block image %}
       {{ image }}
-      <div class="pt-4">
-      <div class="w-full text-gray-600 text-xs md:text-sm px-6">
-        {% block preheadline %}
-          {{ preheadline }}
+    {% endblock %}
+  {% endif %}
+  <div class="p-6">
+    <div class="tracking-widest text-lg title-font font-medium text-gray-500 mb-1">
+      {% block preheadline %}
+        {{ preheadline }}
+      {% endblock %}
+    </div>
+    <h2 class="title-font text-2xl font-medium text-gray-900 mb-3">
+      {% block headline %}
+        {{ headline }}
+      {% endblock %}
+    </h2>
+    <div class="leading-relaxed mb-3">
+      {% block text %}
+        {{ text }}
+      {% endblock %}
+    </div>
+    <div class="flex items-center flex-wrap ">
+      <a class="{{ button_classes }}">
+        {% block button %}
+          {{ button }}
         {% endblock %}
-      </div>
-      <h2 class="w-full font-bold text-3xl text-gray-800 px-6 font-serif">
-        {% block headline %}
-          {{ headline }}
-        {% endblock %}</h2>
-      <div class="text-gray-800 text-base px-6 mb-5">
-        {% block text %}
-          {{ text }}
-        {% endblock %}
-      </div>
-      </div>
-  </div>
-  <div class="flex-none mt-auto bg-white rounded-b rounded-t-none overflow-hidden shadow p-6">
-    <div class="flex items-center justify-start">
-      {% include '@atoms/button/button.twig' with { variant: 'primary', text: "Read more", color: "orange" } only %}
+        <svg class="w-4 h-4 ml-2" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2" fill="none"
+             stroke-linecap="round" stroke-linejoin="round">
+          <path d="M5 12h14"></path>
+          <path d="M12 5l7 7-7 7"></path>
+        </svg>
+      </a>
     </div>
   </div>
+</div>
 </{{ element }}>
