--- a/packages/wingsuit/source/default/patterns/03-organisms/footer/footer.twig
+++ b/packages/wingsuit/source/default/patterns/03-organisms/footer/footer.twig
@@ -1,34 +1,73 @@
-<footer class="bg-white mt-32">
+<footer class="bg-white mt-32 body-font">
   {% embed "@atoms/container/container.twig" %}
-  {% block content %}
-    <div class="w-full flex flex-col md:flex-row py-6">
-
-      <div class="flex-1 mb-6">
-
-        <a class="text-orange-600 no-underline hover:no-underline font-bold text-2xl lg:text-4xl" href="#">
-          <div class="max-w-120">
-            {% include "@atoms/image/image.twig" with {"url": "ws-assets://images/logo.svg"} only %}
-          </div>
-        </a>
-      </div>
-
-      <div class="flex-1">
-        <p class="uppercase text-gray-500 md:mb-6">Links</p>
+    {% block content %}
+      <div class="w-full flex flex-col md:flex-row py-6">
+        <div class="flex-1">
+          <p class="uppercase text-gray-500 md:mb-6">Links</p>
           {{ menu_1 }}
+        </div>
+        <div class="flex-1">
+          <p class="uppercase text-gray-500 md:mb-6">Legal</p>
+          {{ menu_2 }}
+        </div>
+        <div class="flex-1">
+          <p class="uppercase text-gray-500 md:mb-6">Social</p>
+          {{ menu_3 }}
+        </div>
+        <div class="flex-1">
+          <p class="uppercase text-gray-500 md:mb-6">Company</p>
+          {{ menu_4 }}
+        </div>
+        <div class="flex-1 mb-6 flex md:justify-end">
+          <a class="text-orange-600 no-underline hover:no-underline font-bold text-2xl lg:text-4xl" href="#">
+            <div class="max-w-120">
+              {% include "@atoms/image/image.twig" with {"url": "ws-assets://images/logo.svg"} only %}
+            </div>
+          </a>
+        </div>
       </div>
-      <div class="flex-1">
-        <p class="uppercase text-gray-500 md:mb-6">Legal</p>
-        {{ menu_2 }}
-      </div>
-      <div class="flex-1">
-        <p class="uppercase text-gray-500 md:mb-6">Social</p>
-        {{ menu_3 }}
-      </div>
-      <div class="flex-1">
-        <p class="uppercase text-gray-500 md:mb-6">Company</p>
-        {{ menu_4 }}
-      </div>
-    </div>
-  {% endblock %}
+    {% endblock %}
   {% endembed %}
+  </div>
+  <div class="bg-gray-200">
+    {% embed "@atoms/container/container.twig" %}
+      {% block content %}
+    <div class="py-4 px-5 flex flex-wrap flex-col sm:flex-row">
+        <p class="text-gray-500 text-sm text-center sm:text-left">© 2020 wingsuit —
+          <a href="https://twitter.com/knyttneve" rel="noopener noreferrer" class="text-gray-600 ml-1" target="_blank">@key-tec</a>
+        </p>
+        <span class="inline-flex sm:ml-auto sm:mt-0 mt-2 justify-center sm:justify-start">
+        <a class="text-gray-500">
+          <svg fill="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="w-5 h-5"
+               viewBox="0 0 24 24">
+            <path d="M18 2h-3a5 5 0 00-5 5v3H7v4h3v8h4v-8h3l1-4h-4V7a1 1 0 011-1h3z"></path>
+          </svg>
+        </a>
+        <a class="ml-3 text-gray-500">
+          <svg fill="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="w-5 h-5"
+               viewBox="0 0 24 24">
+            <path
+              d="M23 3a10.9 10.9 0 01-3.14 1.53 4.48 4.48 0 00-7.86 3v1A10.66 10.66 0 013 4s-4 9 5 13a11.64 11.64 0 01-7 2c9 5 20 0 20-11.5a4.5 4.5 0 00-.08-.83A7.72 7.72 0 0023 3z"></path>
+          </svg>
+        </a>
+        <a class="ml-3 text-gray-500">
+          <svg fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+               class="w-5 h-5" viewBox="0 0 24 24">
+            <rect width="20" height="20" x="2" y="2" rx="5" ry="5"></rect>
+            <path d="M16 11.37A4 4 0 1112.63 8 4 4 0 0116 11.37zm1.5-4.87h.01"></path>
+          </svg>
+        </a>
+        <a class="ml-3 text-gray-500">
+          <svg fill="currentColor" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="0"
+               class="w-5 h-5" viewBox="0 0 24 24">
+            <path stroke="none"
+                  d="M16 8a6 6 0 016 6v7h-4v-7a2 2 0 00-2-2 2 2 0 00-2 2v7h-4v-7a6 6 0 016-6zM2 9h4v12H2z"></path>
+            <circle cx="4" cy="4" r="2" stroke="none"></circle>
+          </svg>
+        </a>
+        </span>
+      </div>
+      {% endblock %}
+    {% endembed %}
+  </div>
 </footer>
