--- a/docs/src/components/Homepage/MainLinks/style.css
+++ b/docs/src/components/Homepage/MainLinks/style.css
@@ -1,6 +1,3 @@
-#main-links {
-}
-
 #main-links hr {
   margin: 50px auto 0;
 }
@@ -29,7 +26,6 @@
 }
 
 .try-now {
-  max-width: 450px;
   margin: auto;
   padding-top: 30px;
   padding-bottom: 30px;
@@ -66,10 +62,6 @@
     width: 55% !important;
   }
 
-  #main-links {
-    margin: 30px auto 20px;
-  }
-
   #main-links pre {
     padding: 13px 28px;
     font-size: 12px;
@@ -79,10 +71,6 @@
 @media only screen and (max-width: 600px) {
   #main-links .col-xs-6 {
     width: 65% !important;
-  }
-
-  #main-links {
-    margin: 24px auto 16px;
   }
 
   #main-links hr {
@@ -100,12 +88,26 @@
     width: 75% !important;
   }
 
-  #main-links {
-    margin: 20px auto 13px;
-  }
-
   #main-links pre {
     padding: 13px 20px;
     line-height: 18px;
   }
+}
+
+.svg-triangle--left {
+  transform: rotate(180deg);
+}
+
+.svg-triangle {
+  fill: #F0FFF4;
+}
+
+.triangle-container {
+  position: relative;
+}
+
+.svg-triangle {
+  position: absolute;
+  top: 50%;
+  transform: translateY(-50%);
 }
