--- a/packages/wingsuit/source/default/patterns/03-organisms/header/header.twig
+++ b/packages/wingsuit/source/default/patterns/03-organisms/header/header.twig
@@ -7,13 +7,13 @@
           x-on:click="menuIsOpen = !menuIsOpen">
     {% embed "@atoms/container/container.twig" %}
       {% block content %}
-        <div class="container mx-auto flex flex-wrap p-5 flex-col md:flex-row items-center">
+        <div class="container mx-auto flex flex-wrap p-5 justify-between md:flex-row items-center">
           <div class="flex items-center">
-            <a class="text-white no-underline hover:no-underline font-bold text-2xl lg:text-4xl" href="#">
-              <!--Icon from: http://www.potlabicons.com/ -->
-              <div class="max-w-120">
-                {% include "@atoms/image/image.twig" with {"url": "ws-assets://images/logo.svg"} only %}
-              </div>
+            <a class="flex title-font font-medium items-center text-gray-900 mb-4 md:mb-0">
+              <svg xmlns="http://www.w3.org/2000/svg" fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="w-10 h-10 text-white p-2 bg-pink-500 rounded-full" viewBox="0 0 24 24">
+                <path d="M12 2L2 7l10 5 10-5-10-5zM2 17l10 5 10-5M2 12l10 5 10-5"></path>
+              </svg>
+              <span class="ml-3 text-xl">tailblocks</span>
             </a>
           </div>
           <div class="block lg:hidden pr-4">
@@ -23,11 +23,9 @@
                id="nav-content"
                :class="{'block -mx-6': menuIsOpen, 'hidden': !menuIsOpen}">
             {{ menu }}
-            <button class="inline-flex items-center bg-gray-200 border-0 py-1 px-3 focus:outline-none hover:bg-gray-300 rounded text-base mt-4 md:mt-0">Button
-              <svg fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="w-4 h-4 ml-1" viewBox="0 0 24 24">
-                <path d="M5 12h14M12 5l7 7-7 7"></path>
-              </svg>
-            </button>
+            <div>
+              {{ button }}
+            </div>
           </div>
         </div>
       {% endblock %}
