--- a/packages/wingsuit/source/default/patterns/02-molecules/menu/_menu--footer.twig
+++ b/packages/wingsuit/source/default/patterns/02-molecules/menu/_menu--footer.twig
@@ -2,11 +2,11 @@
 
 <nav role="navigation">
   <ul {{ attributes.addClass([
-    'list-reset mb-6',
+    'list-reset mb-6 grid lg:block',
   ] | sort | join(' ') | trim) }} >
     {% for item in items %}
       <li class="mt-2 inline-block mr-2 md:block md:mr-0">
-        <a class="no-underline hover:underline text-gray-800 hover:text-orange-500 {% if (item.in_active_trail) %}is-active{% endif %}" href="{{ item.url }}">
+        <a class="text-gray-600 hover:text-gray-800 {% if (item.in_active_trail) %}is-active{% endif %}" href="{{ item.url }}">
           {{ item.title }}
         </a>
       </li>
