--- a/packages/wingsuit/source/default/patterns/02-molecules/menu/_menu--primary.twig
+++ b/packages/wingsuit/source/default/patterns/02-molecules/menu/_menu--primary.twig
@@ -1,7 +1,7 @@
 {% set attributes = attributes|default(create_attribute()) %}
   <ul class="list-reset lg:flex justify-end flex-1 items-center">
     {% for item in items %}
-      <li class="mr-3">
+      <li class="py-2 lg:py-0 border-b lg:border-b-0 border-black lg:mr-3">
         {# {% if (item.in_active_trail) %}no-underline {% else %} hover:text-gray-900 hover:text-underline py-2 px-4{% endif %} #}
         <a class="mr-5 text-gray-600 hover:text-gray-900"
           href="{{ item.url }}">
