WS #00: general update.

--- a/packages/wingsuit/apps/storybook/patterns/05-pages/homepage/homepage.twig
+++ b/packages/wingsuit/apps/storybook/patterns/05-pages/homepage/homepage.twig
@@ -19,7 +19,7 @@
         {{ pattern_preview('card') }}
       {% endblock %}
     {% endembed %}
-    {% embed "@organisms/section/section.twig" with { columns: 1, headline: "Accordion", padding_top: "small"} %}
+    {% embed "@organisms/section/section.twig" with { columns: 1, headline: "Accordion"} %}
       {% block column_1 %}
         {{ pattern_preview('accordion') }}
       {% endblock %}
