--- a/packages/wingsuit/source/default/patterns/02-molecules/card/card.twig
+++ b/packages/wingsuit/source/default/patterns/02-molecules/card/card.twig
@@ -10,9 +10,9 @@
   'flex',
 ]) | sort | join(' ') | trim %}
 
-{% set button_classes = ([
+{% set link_classes = ([
   alignment == 'center'?'mx-auto': '',
-  'text-indigo-500', 'inline-flex', 'items-center', 'md:mb-2', 'lg:mb-0',
+  'text-indigo-500', 'inline-flex', 'md:mb-2', 'lg:mb-0',
 ]) | sort | join(' ') | trim %}
 
 <{{ element }} {{ attributes.addClass([
@@ -43,17 +43,10 @@
         {{ text }}
       {% endblock %}
     </div>
-    <div class="flex items-center flex-wrap ">
-      <a class="{{ button_classes }}">
-        {% block button %}
-          {{ button }}
-        {% endblock %}
-        <svg class="w-4 h-4 ml-2" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2" fill="none"
-             stroke-linecap="round" stroke-linejoin="round">
-          <path d="M5 12h14"></path>
-          <path d="M12 5l7 7-7 7"></path>
-        </svg>
-      </a>
+    <div class="{{ link_classes }}">
+      {% block link %}
+        {{ link }}
+      {% endblock %}
     </div>
   </div>
 </div>
