--- a/packages/wingsuit/source/default/patterns/03-organisms/grid/grid.twig
+++ b/packages/wingsuit/source/default/patterns/03-organisms/grid/grid.twig
@@ -17,58 +17,12 @@
           If every column has the same classes use "default" as key.
  */
 #}
-{% set column_configuration = {
-  1:
-  {
-    equal: {default: 'w-full'},
-  },
-  2:
-  {
-    equal: {default: 'flex flex-col w-full md:w-1/2 mb-20 last:mb-0 md:mb-0'}, '66x33': {1: 'flex flex-col w-full md:w-2/3 mb-20 last:mb-0 md:mb-0', 2: 'flex flex-col w-full md:w-1/3 mb-20 last:mb-0 md:mb-0'}, '33x66': {1: 'flex flex-col w-full md:w-1/3 mb-20 last:mb-0 md:mb-0', 2: 'flex flex-col w-full md:w-2/3 mb-20 last:mb-0 md:mb-0'}
-  },
-  3:
-  {
-    equal: {default: 'flex flex-col w-full md:w-1/3 mb-20 last:mb-0 md:mb-0'},
-  },
-  4:
-  {
-    equal: {default: 'flex flex-col w-full md:w-1/4 mb-20 last:mb-0 md:mb-0'},
-  },
-  5:
-  {
-    equal: {default: 'flex flex-col w-full sm:w-1/2 md:w-1/5 mb-20 last:mb-0 md:mb-0'},
-  }
-} %}
-
-{#
-/**
- * Gap configuration:
- *
- * Adjust here the gap between the colums.
- */
-#}
-{% set gap_configuration = {
-  none: '',
-  default: 'px-6 md:px-25',
-  large: 'px-10 md:px-35'
-} %}
-
-{% set gap_configuration_negative_sizes = {
-  none: '',
-  default: '-mx-6 -md:mx-25',
-  large: '-mx-10 -md:mx-35'
-} %}
-
-{#
-/**
- * Configuration ends here.
- *
- * Propably you don't need to adjust this.
- */
-#}
 
 {% set columns = columns|default(2) %}
 {% set gap = gap|default('default') %}
+{% set gap_cell = pattern_configuration('grid', columns ~ '_column', 'gap')[gap]['cell'] %}
+{% set gap_container = pattern_configuration('grid', columns ~ '_column', 'gap')[gap]['container'] %}
+{% set column_configuration = pattern_configuration('grid', columns ~ '_column', 'columns') %}
 
 {# Here we check if a configuration is manual provied #}
 {# if not take a configuration from wingsuit.yml file #}
@@ -78,7 +32,7 @@
 {% if config is empty %}
   {% set config = 'equal' %}
 {% endif %}
-{% set current_configuration = column_configuration[columns][config] %}
+{% set current_configuration = column_configuration[config] %}
 
 {% if current_configuration is not empty %}
 
@@ -91,7 +45,7 @@
 
   <div {{ attributes|default(create_attribute()).addClass(
     [
-      gap_configuration_negative_sizes[gap],
+      gap_container,
     'flex flex-wrap'
   ] | sort | join(' ') | trim) }}>
     {% block columns %}
@@ -99,7 +53,7 @@
         {% block column %}
           {% set column_classes = current_configuration[i] is not empty ? current_configuration[i] : current_configuration['default'] %}
           {% if gap != '' %}
-            {% set column_classes = column_classes ~ ' ' ~ gap_configuration[gap] %}
+            {% set column_classes = column_classes ~ ' last:mb-0 md:mb-0 ' ~ gap_cell %}
           {% endif %}
           <div class="{{ column_classes }}">
             {{ _context['column_' ~ i ] }}
