--- a/packages/wingsuit/source/default/patterns/01-atoms/placeholder/placeholder.twig
+++ b/packages/wingsuit/source/default/patterns/01-atoms/placeholder/placeholder.twig
@@ -4,7 +4,7 @@
  * Placeholder component.
  *
  * Use this component for prototyping images.
- * Configure image styles in apps/storybook/config/image.config.yml.
+ * Configure image styles in placeholder.wingsuit.yml.
  *
  * Use variant image or background.
  */
@@ -16,10 +16,10 @@
 
 {% if variant == 'image' %}
   {%- set image -%}
-    {{ placeholder.image(style, imageConfig, placeholder_url) }}
+    {{ placeholder.image(style, placeholder_url) }}
   {% endset %}
   {{ image }}
 {% elseif variant == 'background' %}
-  {{ placeholder.background(style, imageConfig, background_classes, placeholder_url) }}
+  {{ placeholder.background(style, background_classes, placeholder_url) }}
 {% endif %}
 
