Ws #61: buttons fix.

--- a/packages/wingsuit/source/default/patterns/04-templates/site-container.twig
+++ b/packages/wingsuit/source/default/patterns/04-templates/site-container.twig
@@ -1,6 +1,6 @@
 {# Include this template inside the page.html.twig in drupal. #}
 {% block header %}
-  {% include '@organisms/header/header.twig' with {menu: primary_menu, has_spacer: header_has_spacer, button: button} only%}
+  {% include '@organisms/header/header.twig' with {menu: primary_menu, has_spacer: header_has_spacer, button: default} only%}
 {% endblock header %}
 
 <main class="main-content">
