--- a/packages/wingsuit/source/default/patterns/01-atoms/button/button.twig
+++ b/packages/wingsuit/source/default/patterns/01-atoms/button/button.twig
@@ -6,18 +6,28 @@
   {% set attributes = attributes.setAttribute('href', url) %}
   {% set tag_name = 'a' %}
 {% endif %}
+{% set icon_size = ([
+  icon_size == 'small' ? 'w-8 h-8',
+  icon_size == 'medium' ? 'w-10 h-10',
+  icon_size == 'large' ? 'w-12 h-12',
+]) | sort | join(' ') | trim %}
 
 <{{ tag_name }} {{ attributes.addClass([
-  'inline-flex border-0 py-2 px-6 focus:outline-none rounded text-lg',
-  variant == 'pink' ? 'bg-pink-500 text-white hover:bg-pink-600',
-  variant == 'blue' ? 'bg-blue-200 text-black text-base mt-4 md:mt-0 hover:bg-blue-400',
-  variant == 'hollow-pink' ? 'border border-pink-500 text-pink-500',
+  'flex items-center inline-flex border-0 py-1 px-2 focus:outline-none rounded',
+  variant == 'default' ? 'bg-'~ color ~' text-' ~ text_color ~' hover:bg-' ~ color ~ '-600',
+  variant == 'outline' ? 'border border-'~ color ~' text-' ~ text_color,
+  expanded == 'full' ? 'w-full',
+  size == 'small' ? 'text-xs',
+  size == 'medium' ? 'text-base',
+  size == 'large' ? 'text-xl',
+  svg_alignment == 'left' ? 'flex-row-reverse',
 ] | sort | join(' ') | trim) }}>
 {{ text }}
   {% if svg is not empty %}
     {% include "@atoms/svg/_svg--icon.twig" with {
       icon: svg,
-      size: 'w-4',
+      fill_color: 'currentColor',
+      size: icon_size,
     } %}
   {% endif %}
 </{{ tag_name }}>
