--- a/packages/wingsuit/source/default/patterns/02-molecules/hero/hero.twig
+++ b/packages/wingsuit/source/default/patterns/02-molecules/hero/hero.twig
@@ -6,29 +6,26 @@
  * See hero.wingsuit.yaml for documentation.
  */
 #}
-<div class="text-white">
-  <div class="pt-24">
-
-    {% embed "@atoms/container/container.twig" %}
-      {% block content %}
-        <section class="text-gray-700 body-font">
-          <div class="flex py-24 md:flex-row flex-col items-center">
-            <div class="lg:flex-grow md:w-1/2 lg:pr-24 md:pr-16 flex flex-col md:items-start md:text-left mb-16 md:mb-0 items-center text-center">
-              <div class="uppercase tracking-loose w-full">{{ pre_headline }}</div>
-              <h1 class="title-font sm:text-4xl text-3xl mb-4 font-medium text-gray-900">{{ headline }}</h1>
-              <p class="mb-8 leading-relaxed">{{ text }}</p>
-              <div class="flex justify-center">
-                <div class="mr-5">{{ button }}</div>
-                <div>{{ button_second }}</div>
-              </div>
-            </div>
-            <div class="lg:max-w-lg lg:w-full md:w-1/2 w-5/6">
-              {{ image }}
+<div>
+  {% embed "@atoms/container/container.twig" %}
+    {% block content %}
+      <section class="text-gray-700 body-font">
+        <div class="flex py-24 md:flex-row flex-col items-center">
+          <div
+            class="lg:flex-grow md:w-1/2 lg:pr-24 md:pr-16 flex flex-col md:items-start md:text-left mb-16 md:mb-0 items-center text-center">
+            <div class="uppercase tracking-loose w-full">{{ pre_headline }}</div>
+            <h1 class="title-font sm:text-4xl text-3xl mb-4 font-medium text-gray-900">{{ headline }}</h1>
+            <p class="mb-8 leading-relaxed">{{ text }}</p>
+            <div class="flex justify-center">
+              <div class="mr-5">{{ button }}</div>
+              <div>{{ button_second }}</div>
             </div>
           </div>
-        </section>
-      {% endblock %}
-    {% endembed %}
-  </div>
+          <div class="lg:max-w-lg lg:w-full md:w-1/2 w-5/6">
+            {{ image }}
+          </div>
+        </div>
+      </section>
+    {% endblock %}
+  {% endembed %}
 </div>
-
